Added login test
Added test login with the following checks:

- Checks whether user is created.
- Checks whether login works
- Checks whether the correct user is logged in
- Checks whether user is redirected to home page after login

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,9 +71,9 @@ pylint:
       codequality: codeclimate.json
     when: always
 
-# test:
-#   stage: Test
-#   variables:
-#     DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/$POSTGRES_DB"
-#   script:
-#     - python manage.py test
+test_login:
+  stage: Test
+  variables:
+    DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/$POSTGRES_DB"
+  script:
+    - python manage.py test cs28.tests.test_login
