--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,7 @@ before_script:
   - python -V  # Print out python version for debugging
   # Uncomment next line if your Django app needs a JS runtime:
   # - apt-get update -q && apt-get install nodejs -yqq
+  - apt-get install -y python-dev python-pip
   - pip install -r requirements.txt
 
 # To get Django tests to work you may need to create a settings file using
