--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ bcrypt==3.2.0
 gunicorn==20.0.4
 django-heroku==0.3.1
 dj-database-url==0.5.0
-psycopg2==2.8.6
+psycopg2-binary==2.8.6
 whitenoise==5.2.0
