--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,13 +8,14 @@ image: python:latest
 # Check out: http://docs.gitlab.com/ce/ci/docker/using_docker_images.html#what-is-a-service
 services:
   # - mysql:latest
-  - postgres:latest
+  - postgres:12.2-alpine
 
 variables:
   POSTGRES_DB: ci
-
-environment:
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: "postgres"
   POSTGRES_HOST_AUTH_METHOD: trust
+
 
 # This folder is cached between builds
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
