--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,11 @@ before_script:
   # Uncomment next line if your Django app needs a JS runtime:
   # - apt-get update -q && apt-get install nodejs -yqq
   - pip install -r requirements.txt
+  - cd cs28_project
+  - python manage.py makemigrations
+  - python manage.py migrate
+  - python manage.py flush
+  - python populate.py
 
 # To get Django tests to work you may need to create a settings file using
 # the following DATABASES:
